--- a/templates/block/block--content-sequence.html.twig
+++ b/templates/block/block--content-sequence.html.twig
@@ -14,7 +14,8 @@
   'block-' ~ configuration.provider|clean_class,
   'block-' ~ plugin_id|clean_class,
   bundle ? 'block--type-' ~ bundle|clean_class,
-  view_mode ? 'block--view-mode-' ~ view_mode|clean_class
+  view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
+  'ucb-content-sequence'
 ] %}
 
 {# Block/Title/Icon Styles #}
