--- a/templates/block/block--content-sequence.html.twig
+++ b/templates/block/block--content-sequence.html.twig
@@ -1,13 +1,8 @@
 {#
 /**
- * @file
- * Contains the template for the "Content Sequence" block type.
- * @author Jacob Korf, Tim Tripp
+ * @file Contains the template to display the Content Sequence block.
  */
 #}
-
-{{ attach_library('boulder_base/ucb-content-sequence') }}
-
 {% set classes = [
   'container',
   'block',
@@ -18,79 +13,51 @@
   'ucb-content-sequence'
 ] %}
 
-{# Block/Title/Icon Styles #}
-{% set blockStyles = [
-  content.field_bs_background_style|render|striptags|trim,
-  content.field_bs_content_font_scale|render|striptags|trim,
-  content.field_bs_icon_position|render|striptags|trim,
-  content.field_bs_heading_alignment|render|striptags|trim,
-  content.field_bs_title_font_scale|render|striptags|trim,
-] %}
-
-{% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
-{% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
-{% set headingTag = content.field_bs_heading|render|striptags|trim %}
-{% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
-
+{% extends '@boulder_base/block/styled-block.html.twig' %}
 {% block content %}
-  <div{{ attributes.addClass(classes, blockStyles) }}>
-    {{ title_prefix }}
-    {% if label %}
-      <div class="block-title-outer">
-				<{{ headingTag }}{{title_attributes}} class="block-title {{ headingStyle }}">
-					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
-						{{ content.field_bs_icon }}
-					</span>
-					<span class="block-title-text">
-						{{ label }}
-					</span>
-				</{{ headingTag }}>
-			</div>
-    {% endif %}
-    {{ title_suffix }}
-    <div class="vertical-timeline-container-wrapper">
-      <ol class="vertical-timeline-container">
-        {% for key, item in content['#block_content'].field_content_sequence_items %}
-          <li class="vertical-timeline-card">
-            <div class="vertical-timeline-card-wrapper">
-              <div class="vertical-timeline-card-media">
-                {% set imageField = item.entity.field_sequence_item_media.entity.field_media_image %}{% set videoField = item.entity.field_sequence_item_media.entity.field_media_oembed_video %}
-                {% if imageField %}
-                  {{ imageField|view }}
-                {% elseif videoField %}
-                  {{ videoField|view }}
-                  <span class="noImage"></span>
-                {% else %}
-                  <span class="noImage"></span>
-                {% endif %}
-              </div>
-              <div class="vertical-timeline-card-header">
-                <h3 class="vertical-timeline-card-date">
-                  {% if item.entity.field_sequence_item_d_start_date.value %}
-                    {{ item.entity.field_sequence_item_d_start_date.value }}
-                  {% elseif item.entity.field_sequence_item_start_date.value %}
-                    {{ item.entity.field_sequence_item_start_date.value|date('m/d/Y') }}
-                  {% else %}
-                    {% set stepNo = key + 1 %}
-                    STEP
-                    {{ stepNo }}
-                  {% endif %}
-                </h3>
-                <h4 class="vertical-timeline-card-title">
-                  {% if item.entity.field_sequence_item_url.uri %}
-                    {{ link(item.entity.field_sequence_item_title.value, item.entity.field_sequence_item_url.uri) }}
-                  {% else %}
-                    {{ item.entity.field_sequence_item_title.value }}
-                  {% endif %}
-                </h4>
-              </div>
-              <div class="vertical-timeline-card-body">
-                {{ item.entity.field_sequence_item_descr|view }}
-              </div>
+  {{ attach_library('boulder_base/ucb-content-sequence') }}
+  <div class="vertical-timeline-container-wrapper">
+    <ol class="vertical-timeline-container">
+      {% for key, item in content['#block_content'].field_content_sequence_items %}
+        <li class="vertical-timeline-card">
+          <div class="vertical-timeline-card-wrapper">
+            <div class="vertical-timeline-card-media">
+              {% set imageField = item.entity.field_sequence_item_media.entity.field_media_image %}{% set videoField = item.entity.field_sequence_item_media.entity.field_media_oembed_video %}
+              {% if imageField %}
+                {{ imageField|view }}
+              {% elseif videoField %}
+                {{ videoField|view }}
+                <span class="noImage"></span>
+              {% else %}
+                <span class="noImage"></span>
+              {% endif %}
             </div>
-          </li>
-        {% endfor %}
-      </ol>
-    </div>
+            <div class="vertical-timeline-card-header">
+              <h3 class="vertical-timeline-card-date">
+                {% if item.entity.field_sequence_item_d_start_date.value %}
+                  {{ item.entity.field_sequence_item_d_start_date.value }}
+                {% elseif item.entity.field_sequence_item_start_date.value %}
+                  {{ item.entity.field_sequence_item_start_date.value|date('m/d/Y') }}
+                {% else %}
+                  {% set stepNo = key + 1 %}
+                  STEP
+                  {{ stepNo }}
+                {% endif %}
+              </h3>
+              <h4 class="vertical-timeline-card-title">
+                {% if item.entity.field_sequence_item_url.uri %}
+                  {{ link(item.entity.field_sequence_item_title.value, item.entity.field_sequence_item_url.uri) }}
+                {% else %}
+                  {{ item.entity.field_sequence_item_title.value }}
+                {% endif %}
+              </h4>
+            </div>
+            <div class="vertical-timeline-card-body">
+              {{ item.entity.field_sequence_item_descr|view }}
+            </div>
+          </div>
+        </li>
+      {% endfor %}
+    </ol>
   </div>
 {% endblock %}
