--- a/css/block/ucb-content-sequence.css
+++ b/css/block/ucb-content-sequence.css
@@ -22,6 +22,7 @@
 
 .ucb-content-sequence .vertical-timeline-card-wrapper {
   margin: 10px 20px 40px;
+  background: var(--ucb-white);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   text-align: left;
   transition: box-shadow .5s ease;
